# FloorMatrix

./: .gitignore  FloorMessages.py  README.md  newUML.graphml  new_script.py  no.cpp  platformio.ini  pyproject.toml
floormatrix/: cli.py
floormatrix/helper/: clear.py
floormatrix/modes/: clock.py  happy_messages.py  rainbow.py
lib/BLEDriver/: BLEDriver.h  BLEInterface.h  library.json
lib/BLEDriver/drivers/HM10/: HM10.cpp  HM10.h
lib/BLEDriver/drivers/HM10/debuggin/: serial_pass.cpp
lib/BLEDriver/drivers/nrf52/: BLEnRF52.cpp  BLEnRF52.h
src/: Marbles.h  main.cpp  state_machine.cpp
