[project]
name = "floormatrix"
version = "0.1.0"
description = "Driver and BLE-Client to talk to a LED-Matrix"
authors = [
    {name = "Escape9002",email = "antonio.rehwinkel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak (>=1.1.1,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
floormatrix = "floormatrix.cli:main_entry"